# helios_control

./: .gitignore  .gitmodules  README.md
actuators_controller_pkg/actuators_controller_pkg/: CMakeLists.txt  package.xml
actuators_controller_pkg/gm6020_controller_pkg/: CMakeLists.txt  package.xml
actuators_pkg/actuators_pkg/: CMakeLists.txt  package.xml
actuators_pkg/gm6020_hw/: package.xml
autoaim_bridge/: CMakeLists.txt  package.xml
autoaim_bridge/hardware/src/: ctrl_bridge.cpp
can_bus/: CMakeLists.txt  can_bus.xml  package.xml
can_bus/include/can_bus/: CANBus.hpp  SocketCAN.hpp  Types.hpp  visibility_control.h
can_bus/src/: CANBus.cpp  SocketCAN.cpp
control_core/: CMakeLists.txt  package.xml
ctrl_bridge/: CMakeLists.txt  package.xml
ctrl_bridge/include/ctrl_bridge/: ctrl_bridge.hpp
ctrl_bridge/launch/: ctrl_bridge.launch.py
ctrl_bridge/src/: ctrl_bridge.cpp
helios_control/: CMakeLists.txt  package.xml
helios_control_bring_up/: CMakeLists.txt  package.xml
helios_control_bring_up/config/: gm6020.controllers.yaml
helios_control_bring_up/descriptions/urdf/: gm6020.ros2_control.xacro  gm6020.urdf.xacro
helios_control_bring_up/launch/: gm6020.launch.py
helios_control_interfaces/: CMakeLists.txt  package.xml
helios_control_interfaces/msg/: GM6020Msg.msg  GimbalCmd.msg  MotorState.msg  MotorStates.msg  ShooterCmd.msg
math_utilities/: CMakeLists.txt  package.xml
math_utilities/include/math_utilities/: ExtendedKalmanFilter.hpp  IMUFilterBase.hpp  KalmanFilter.hpp  LowPassFilter.hpp  MathUtilities.hpp  MotorPacket.hpp  OmnidirectionalSolver.hpp  PID.hpp
math_utilities/src/: ExtendedKalmanFilter.cpp  IMUFilterBase.cpp  KalmanFilter.cpp  LowPassFilter.cpp  MotorPacket.cpp  OmnidirectionalSolver.cpp  PID.cpp
motor_hardwares/3508_hardwares/: CMakeLists.txt  package.xml
motor_hardwares/motor_3508/: CMakeLists.txt  package.xml
motor_hardwares/motor_hardwares/: CMakeLists.txt  package.xml
referee_bridge/: CMakeLists.txt  package.xml
referee_bridge/hardware/src/: Referee.c  (+1 more)
referee_bridge/src/: CRC.c  Referee.c  RefereeBridge.cpp
referee_utilities/referee_bridge/: CMakeLists.txt
referee_utilities/referee_controller/: CMakeLists.txt  package.xml
referee_utilities/referee_utilities/: CMakeLists.txt  package.xml
rm_bring_up/bring_up/: CMakeLists.txt  package.xml
rm_bring_up/rm_bring_up/: CMakeLists.txt  package.xml
rm_bring_up/rm_interfaces/: CMakeLists.txt  package.xml
rm_bring_up/rm_interfaces/msg/AutoAim/: Target.msg
rm_bring_up/rm_interfaces/msg/Common/: IMUData.msg
rm_bring_up/rm_interfaces/msg/IMU/: IMUReceive.msg  IMUSend.msg
rm_bring_up/rm_interfaces/msg/Referee/: AerialRobotEnergy.msg  BuffMusk.msg  BulletRemaining.msg  DartClientCmd.msg  DartRemainingTime.msg  DartStatus.msg  EventData.msg  GameRobotHP.msg  GameRobotState.msg  GameState.msg  JudgeSystemData.msg  PowerHeatData.msg  ShootData.msg
serial/: CMakeLists.txt
(+20 files in other folders)
